--- a/public/hostplaylist.html
+++ b/public/hostplaylist.html
@@ -37,26 +37,16 @@
 
                 <div id="summary">
                     <div id="summarytext">
-                            <br>
-                            <br>
-                            <h1>What is DJ Share?</h1>
-                                <br>
-                                <p>We don’t serve their kind here! What? Your droids. They’ll have to wait outside. We don’t want them here. Listen, why don’t you wait out by the speeder. We don’t want any trouble. I heartily agree with you sir. Negola dewaghi wooldugger?!? He doesn’t like you. I’m sorry. I don’t like you either You just watch yourself. We’re wanted men. I have the death sentence in twelve systems. I’ll be careful than. You’ll be dead. This little one isn’t worth the effort. Come let me buy you something…
-                                </p>    
-                                    <br>
-                                    <br>
-                            <h1>How to use DJ Share !</h1>
-                                <br>
-                                <p>
-                                The approach will not be easy. You are required to maneuver straight down this trench and skim the surface to this point. The target area is only two meters wide. It’s a small thermal exhaust port, right below the main port. The shaft leads directly to the reactor system. A precise hit will start a chain reaction which should destroy the station. Only a precise hit will set up a chain reaction. The shaft is ray-shielded, so you’ll have to use proton torpedoes. That’s impossible, even for a computer. It’s not impossible. I used to bull’s-eye womp rats in my T-sixteen back home. They’re not much bigger than two meters. Man your ships! And may the Force be with you!
-                               <br>
-                               <br>     
-                             </p>
+                        <br>
+                        <br>
+                            <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="900" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <br>
+                        <br>
                     </div>
                 </div>
         </body>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles/homepage.css">
+        <link rel="stylesheet" type="text/css" href="styles/hostplaylist.css">
     </div>
 </div>
 </html>
