--- a/public/homepage.html
+++ b/public/homepage.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <link rel="icon" href="styles/images/icon.png" type="image/gif" sizes="16x16">
-            <title>DJ Share</title>
+            <title>DJ Share Home Page</title>
             <script src="http://cdn.layerjs.org/libs/layerjs/layerjs-0.5.2.min.js"></script>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <link rel="stylesheet" type="text/css" href="style.css">
@@ -25,12 +25,12 @@
                     </div>
                     <div id="navitem2">
                         <h1>
-                            <a href="hostplaylist.html">Host<br>Playlist</a>
+                            <a href="hostplaylist.html">Host_'s<br>Playlists</a>
                         </h1>
                     </div>
                     <div id="navitem">
                         <h1>
-                            <a href="./webbuilding.html">User<br>Settings</a>
+                            <a href="usersettings.html">User<br>Settings</a>
                         </h1>
                     </div>
                 </div>
