--- a/public/login-page.html
+++ b/public/login-page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="styles/images/icon.png" type="image/gif" sizes="16x16">
-    <title>login page</title>
+    <title>DJ Share Login Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="styles/login-style.css">
     <script src="js/user.js"></script>
