--- a/public/usersettings.html
+++ b/public/usersettings.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <link rel="icon" href="styles/images/icon.png" type="image/gif" sizes="16x16">
-            <title>DJ Share Host's Playlists</title>
+            <title>DJ Share Home Page</title>
             <script src="http://cdn.layerjs.org/libs/layerjs/layerjs-0.5.2.min.js"></script>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <link rel="stylesheet" type="text/css" href="style.css">
@@ -38,34 +38,32 @@
                 <div id="summary">
                     <div id="summarytext">
                         <br>
-                        <br>
-                        <h1>Manage Playlists</h1>
-                        <br>
-                        <div id="createplaylistpanel"> 
-                        <input type="createplaylist" class="form-control" id="createplaylist" placeholder="Name of New Playlist" value="">
-                        <button type="button" class="btn btn-primary" id="createplaylistBTN">Create Playlist</button>
-                        </div>
-                        <h3>Avaliable Playlists</h3>
-                        
+                        <h1>User Settings</h1>
                         <br>
                         <br>
-                            <h3>Current Playlist</h3>
+                            <p>Current Email Address: *********<p>
+                            <div class="form-group">        
+                                <input type="email" class="form-control" id="inputEmail" placeholder="New Email Address" value="">
+                            </div>
                             <br>
-                            <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="900" height="500" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                        <br>
-                        <br>
-                            <h3>Invite Guest to Playlist Room</h3>
+                            <p>Change Your Password</p>
+                            <div class="form-group">       
+                                <input type="password" class="form-control" id="password" placeholder="New Password" value="">        
+                            </div>
+                            <div class="form-group">
+                                    <input type="confirmpassword" class="form-control" required autocomplete="off" id="confirmpassword" placeholder="Confirm New Password">
+                            </div>
                             <br>
-                            <p>To invite guests to join your Playlist Room, send the hyperlink below via text, email, slack, ext...</p>
+                            <p>Current Spotify ID: ************</p>
+                            <div class="form-group">       
+                                    <input type="spotifyID" class="form-control" id="spotifyIDfield" placeholder="Spotify ID" value="">        
+                            </div>
                             <br>
-                            <p>Insert Hyperlink Here</p>
                             <br>
-                            <br>
-                    </div>
                 </div>
         </body>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles/hostplaylist.css">
+        <link rel="stylesheet" type="text/css" href="styles/homepage.css">
     </div>
 </div>
 </html>
