--- a/public/usersettings.html
+++ b/public/usersettings.html
@@ -63,7 +63,7 @@
                 </div>
         </body>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles/homepage.css">
+        <link rel="stylesheet" type="text/css" href="styles/usersettings.css">
     </div>
 </div>
 </html>
