button styling update

--- a/public/usersettings.html
+++ b/public/usersettings.html
@@ -45,6 +45,8 @@
                             <div class="form-group">        
                                 <input type="email" class="form-control" id="inputEmail" placeholder="New Email Address" value="">
                             </div>
+                            <button type="button" class="btn" id="emailBtn">Set as new Email</button>
+                            <br>
                             <br>
                             <p>Change Your Password</p>
                             <div class="form-group">       
@@ -53,11 +55,14 @@
                             <div class="form-group">
                                     <input type="confirmpassword" class="form-control" required autocomplete="off" id="confirmpassword" placeholder="Confirm New Password">
                             </div>
+                            <button type="button" class="btn" id="emailBtn">Set as new Password</button>
+                            <br>
                             <br>
                             <p>Current Spotify ID: ************</p>
                             <div class="form-group">       
                                     <input type="spotifyID" class="form-control" id="spotifyIDfield" placeholder="Spotify ID" value="">        
                             </div>
+                            <button type="button" class="btn" id="emailBtn">Set as new Spotify ID</button>
                             <br>
                             <br>
                 </div>
