--- a/public/hostplaylist.html
+++ b/public/hostplaylist.html
@@ -43,12 +43,18 @@
                         <br>
                         <div id="createplaylistpanel"> 
                         <input type="createplaylist" class="form-control" id="createplaylist" placeholder="Name of New Playlist" value="">
-                        <button type="button" class="btn btn-primary" id="createplaylistBTN">Create Playlist</button>
+                        <button type="button" class="btn" id="createplaylistBTN">Create Playlist</button>
                         </div>
                         <br>
                         <br>
                         <h3>Avaliable Playlists</h3>
-                        
+                        <ul id="playlistList">
+                            <li>Playlist 1</li>
+                            <li>Playlist 2</li>
+                            <li>Playlist 3</li>
+                        </ul>
+                        <button type="button" class="btn" id="selectplaylistBTN">Select Playlist</button>
+                        <button type="button" class="btn" id="deleteplaylistBTN">Delete Playlist</button>
                         <br>
                         <br>
                             <h3>Current Playlist</h3>
