--- a/public/hostplaylist.html
+++ b/public/hostplaylist.html
@@ -47,7 +47,7 @@
                         </div>
                         <br>
                         <br>
-                        <h3>Avaliable Playlists</h3>
+                        <h3>Availiable Playlists</h3>
                         <ul id="playlistList">
                             <li>Playlist 1</li>
                             <li>Playlist 2</li>
