adding the login with spotify link to Login.js/added packages

--- a/public/login-page.html
+++ b/public/login-page.html
@@ -38,6 +38,7 @@
                     <a data-toggle="modal" data-target="#regForm" class="signUp" href="#regForm">Sign Up</a>
                 </div>
                 <button type="button" class="btn btn-primary" id="loginBtn">Login</button>
+                <a href="/login" class="btn btn-primary">Log in with Spotify</a>
             </form>
         </div>
     </div>
