attempted to convert html to react code

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -11,13 +11,13 @@
         </head>
         <br>
         <body>
-            <div id="background">
+            <div id="background" data-component="background">
                 <video autoplay muted loop id="myVideo">
                     <source src="https://d2v9y0dukr6mq2.cloudfront.net/video/preview/GTYSdDW/dj-mixer-at-night-club_n3m4pitul__PM.mp4" type="video/mp4">
                         Your browser does not support HTML5 video.
                 </video>
             </div>
-                <div id="nav">
+                <div id="nav" data-component="navbar">
                     <div id="navitem">
                         <h1>
                             <a href="homepage.html">Home<br>Page</a>
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div id="summary">
+                <div id="summary" data-component="summary">
                     <div id="summarytext">
                             <br>
                             <br>
