--- a/public/hostplaylist.html
+++ b/public/hostplaylist.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div id="summary">
+                <div id="summary" data-component="playlist">
                     <div id="summarytext">
                         <br>
                         <br>
