--- a/public/login-page.html
+++ b/public/login-page.html
@@ -14,7 +14,7 @@
     <script src="js/user.js"></script>
 </head>
 
-<body id="LoginForm">
+<body id="LoginForm" data-component="LoginForm">
 <!-- login form -->
 <div class="container">
     <div class="login-form">
@@ -46,7 +46,7 @@
 <!--end of login form-->
 
 <!--registration modal-->
-<div class="modal fade login-modal" data-backdrop="static" id="regForm">
+<div class="modal fade login-modal" data-backdrop="static" id="regForm" data-component="regform">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">      
             <!-- Modal body -->
@@ -95,7 +95,7 @@
 <!--end of registration modal-->
 
 <!--registration success modal-->
-<div class="modal" tabindex="-1" role="dialog" id="successMsg">
+<div class="modal" tabindex="-1" role="dialog" id="successMsg" data-component="regsuccess">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
