--- a/public/usersettings.html
+++ b/public/usersettings.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <div id="summary">
+                <div id="summary" data-component="profile">
                     <div id="summarytext">
                         <br>
                         <h1>User Settings</h1>
